fix(tag-list): Fixes bug where the more button was not aligned correctly in certain edge-cases

--- a/components/tag/src/tag-list/tag-list.scss
+++ b/components/tag/src/tag-list/tag-list.scss
@@ -4,11 +4,11 @@
 }
 
 :host ::ng-deep .dt-tag {
-  margin: 4px;
+  margin: 4px 0 4px 4px;
 }
 
 :host ::ng-deep .dt-tag-add {
-  margin: 4px;
+  margin: 4px 0 4px 4px;
 }
 
 .dt-tag-list-container {
@@ -17,7 +17,6 @@
 }
 
 .dt-tag-list-wrapper {
-  min-height: 32px;
   height: 32px;
   width: auto;
   display: flex;
@@ -28,8 +27,8 @@
 .dt-tag-list-more-btn {
   font-variant: tabular-nums;
   height: 32px;
-  min-width: 72px;
   line-height: 32px;
   text-align: left;
   vertical-align: middle;
+  white-space: nowrap;
 }
